--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 body {
   margin: 0;
+  font-family: 'Inter', sans-serif;
+  width: 100%;
+  height: 97vh;
+}
+
+.root {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
