--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -16,6 +16,7 @@
 
 .card__google_location {
   display: flex;
+  align-items: center;
 }
 
 h4 {
@@ -23,6 +24,7 @@ h4 {
   font-size: 10.24px;
   letter-spacing: 0.17em;
   margin: 0;
+  text-transform: uppercase;
 }
 
 a {
