--- a/src/components/TopBar.css
+++ b/src/components/TopBar.css
@@ -1,6 +1,6 @@
 nav {
   display: flex;
-  background: #F55A5A;
+  background:#1a3f76;
   justify-content: center;
   align-items: center;
   padding: 20px 0;
