--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .container {
   width: 550px;
-  margin-top: 100px;
+  margin-top: 5%;
+  margin-bottom: 100px;
+  background-color: rgb(255, 246, 218);
+  border-radius: 5px 5px 5px 5px;
 }
