--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
-
+  background-image: url('./images/cool-background.jpeg');
+  background-position: center;
 }
 
 .root {
